--- a/src/index.css
+++ b/src/index.css
@@ -47,11 +47,14 @@ body{
   background-image: url(/imgs/fondo3.webp);
   background-repeat: repeat;
 }
-
 .foto-texto{
   font-family: Bugaki;
   background-color: #124361;
   text-decoration: none;
+}
+.foto-link{
+  text-decoration: none;
+  color: whitesmoke;
 }
 
 .introduccion{
@@ -65,6 +68,7 @@ body{
 }
 
 .presentacion{
+  max-width: 1200px;
   color: #124361;
   font-weight: 500;
 }
@@ -100,7 +104,7 @@ body{
   font-family: Bugaki;
   color: whitesmoke;
   font-size: 3rem;
-  max-width: 70%;
+  max-width: 700px;
 }
 .app-h3--libros{
   margin-top: 100px;
@@ -174,7 +178,7 @@ body{
 .tarjeta{
   background-color: #c9dbe7;
   color: #124361;
-  max-width: 60rem;
+  max-width: 800px;
 }
 .tarjeta-img{
   max-width: 350px;
@@ -243,12 +247,10 @@ body{
 
 /*Login.jsx */
 .login{
-  background-color: #FDD28A;
-  max-width: 100vw;
   color: #124361;
 }
 .login-form{
-  max-width: 80%;
+  max-width: 500px;
   background-color: #c9dbe7;
 }
 .login-label{
@@ -265,16 +267,19 @@ body{
 }
 .login-btn--registro{
   background-color: #EF7E6B;
-
+}
+.login-btn--registro:hover{
+  color: #124361;
 }
 .login-img{
-  max-width: 200px;
+  max-width: 130px;
   height: auto;
 }
-.login-span{
-  background-color: #EF7E6B;
-  color: white;
-  font-weight: bold;
+.login-link{
+  color: whitesmoke;
+}
+.login-link:hover{
+  color: #124361;
 }
 
 
@@ -282,14 +287,11 @@ body{
 
 /*Registro.jsx */
 .registro{
-  background-color: #c9dbe7;
-  width: 100%;
-  max-width: 100vw;
-  color: #124361;
-  min-height: 100vh;
+  color: #124361; 
 }
 .registro-form{
-  max-width: 80%;
+  max-width: 450px;
+  max-height: auto;
   background-color: #EF7E6B;
 }
 .registro-label{
@@ -298,6 +300,7 @@ body{
 .registro-btn{
   background-color: #124361;
   color: whitesmoke;
+  font-weight: bold;
 }
 .registro-btn:hover{
   background-color: #c9dbe7;
@@ -333,6 +336,9 @@ body{
 .footer-enlaces{
   text-decoration: none;
   color: #124361;
+}
+.footer-enlaces:hover{
+  color: #c9dbe7;
 }
 
 
