formulario completado y login corregido

--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@ body{
 .formulario{
   background-color: #EF7E6B;
   color: #124361;
-  max-width: 50rem; 
+  max-width: 650px; 
   max-height: auto;
 }
 .formulario-h1{
